Return Case Details, fix alignment

--- a/frontend/src/assets/sass/case.scss
+++ b/frontend/src/assets/sass/case.scss
@@ -2,22 +2,22 @@
   margin: auto;
 }
 
-.case-relations-container {
+.case-activities-container {
   margin: 0vh 2vw;
 }
 
-.case-relations-outer-cell {
+.case-activities-outer-cell {
   min-width: 300px;
 }
 
-.case-relations-badge-container {
+.case-activities-badge-container {
   align-items: center;
 }
 
-.case-relations-action-cell {
+.case-activities-action-cell {
   background: lavender;
 }
 
-.case-relations-footer-cell {
+.case-activities-footer-cell {
   min-height: 12vh;
 }
